<resources>
    <string name="app_name">GROUNDED!</string>

    // introduction to the application
    <string name="intro">Welcome to  GROUNDED, the SELF HELP GUIDE</string>
    <string name="title_activity_useful_links">UsefulLinks</string>
    <string name="links">Useful Links</string>
    <string name="map1">Local Services</string>
    <string name="videos">Helpful Videos</string>
    <string name="journal1">Journals</string>

    // links
    <string name="webLink"> Here are a list of Websites that can lead you to a happier tomorrow</string>
    <string name="title_activity_google_poi">Map</string>

    //splash
    <string name="splash1">Welcome to Anxious or Grounded, i really have not thought of the name yet.</string>

    //Journal
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Journal</string>
    <string name="msg_no_journal">No Entries Found</string>
    <string name="lbl_new_journal_title">New Entry</string>
    <string name="lbl_edit_journal_title">Edit Journal</string>
    <string name="hint_enter_journal">Enter Your Journal</string>
    <string name="title_activity_maps">Map</string>


    //maps
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="map_key" translatable="false">AIzaSyACI9NrSBrQ8hWsvZRDSr1or-QV5XE6plc</string>



</resources>
